<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Show Me the.... Neuron!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="Button">Launch</string>
    <string name="title_activity_second">Neuron Display</string>
    <string name="species">Species</string>
    <string name="human">Human</string>
    <string name="mouse">Mouse</string>
    <string name="rat">Rat</string>
    <string name="area">Area</string>
    <string name="eye">Eye</string>
    <string name="brain">Brain</string>
    <string name="spine">Spine</string>
       

</resources>
