<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MainActivity" >

    <Button
        android:id="@+id/button1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginBottom="19dp"
        android:layout_marginRight="24dp"
        android:enabled = "false"
		android:onClick="launch"
        android:text="@string/Button" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:layout_alignParentTop="true"
        android:text="@string/species" />

   <RadioGroup
        android:id="@+id/radioGroup1"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >

        <RadioButton
            android:id="@+id/radioButton1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:checked = "false"
            android:layout_marginTop="45dp"
            android:text="@string/human" 
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioButton2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:checked = "false"
            android:layout_marginTop="16dp"
            android:text="@string/mouse" 
            android:onClick="onRadioButtonClicked"/>

        <RadioButton
            android:id="@+id/radioButton3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="14dp"
            android:checked = "false"
            android:layout_marginTop="17dp"
            android:text="@string/rat" 
            android:onClick="onRadioButtonClicked"/>
    </RadioGroup>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/textView1"
        android:layout_below="@+id/radioGroup1"
        android:layout_marginTop="45dp"
        android:text="@string/area"
        android:onClick="onRadioButtonClicked" />

     <RadioGroup
        android:id="@+id/radioGroup2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checked = "false"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:orientation="vertical" >
	
	    <RadioButton
	        android:id="@+id/radioButton5"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked = "false"
	        android:layout_marginLeft="14dp"
	        android:layout_marginTop="46dp"
	        android:text="@string/brain"
	        android:onClick="onRadioButtonClicked" />

	    <RadioButton
	        android:id="@+id/radioButton4"
	        android:layout_width="wrap_content"
	        android:layout_height="wrap_content"
	        android:checked = "false"
	        android:layout_marginLeft="14dp"
	        android:layout_marginTop="47dp"
	        android:text="@string/spine" 
	        android:onClick="onRadioButtonClicked"/>
	    
	     <RadioButton
         android:id="@+id/radioButton6"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:checked = "false"
         android:layout_marginLeft="14dp"
         android:layout_marginTop="48dp"
         android:text="@string/eye"
         android:onClick="onRadioButtonClicked" />
	</RadioGroup>

    

</RelativeLayout>